# types

./: pyproject.toml
generator/: __main__.py  data.py  generator_types.py  lib.py  utility.py
generator/templates/: methods.jinja2  objects.jinja2  responses.jinja2
vkbottle_types/: __init__.py  base_model.py  objects.py
vkbottle_types/codegen/: objects.py
vkbottle_types/codegen/methods/: account.py  ads.py  adsweb.py  app_widgets.py  apps.py  auth.py  board.py  calls.py  database.py  docs.py  donut.py  downloaded_games.py  fave.py  friends.py  gifts.py  groups.py  lead_forms.py  likes.py  market.py  messages.py  newsfeed.py  notes.py  notifications.py  orders.py  pages.py  photos.py  podcasts.py  polls.py  pretty_cards.py  search.py  secure.py  stats.py  status.py  storage.py  store.py  stories.py  streaming.py  users.py  utils.py  video.py  (+2 more)
vkbottle_types/codegen/responses/: account.py  addresses.py  ads.py  adsweb.py  (+50 more)
vkbottle_types/events/: __init__.py  bot_events.py  user_events.py
vkbottle_types/methods/: calls.py  groups.py  messages.py  secure.py  video.py
vkbottle_types/responses/: __init__.py  account.py  ads.py  adsweb.py  app_widgets.py  apps.py  auth.py  base.py  base_response.py  board.py  calls.py  database.py  docs.py  donut.py  downloaded_games.py  fave.py  friends.py  gifts.py  groups.py  lead_forms.py  likes.py  market.py  messages.py  newsfeed.py  notes.py  notifications.py  orders.py  pages.py  photos.py  podcasts.py  polls.py  pretty_cards.py  search.py  secure.py  stats.py  status.py  storage.py  store.py  stories.py  streaming.py  (+5 more)
(+2 files in other folders)
