[tool.poetry]
name = "vkbottle-types"
version = "5.131.146.16"
description = "Types for vkbottle"
authors = ["timoniq"]
license = "MIT"
packages = [
    { include = "vkbottle_types" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pydantic = "^2.7.1"
vkbottle = { git = "https://github.com/50Bytes-dev/vkbottle.git", rev = "0af09c5" }
tqdm = "^4.65.0"
dataclass-factory = "^2.16"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
