[tool.poetry]
name = "vkbottle-types"
version = "2.0"
description = "Types for vkbottle"
authors = ["timoniq"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "vkbottle_types" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pydantic = "^2.7.1"
vkbottle = { git = "https://github.com/50Bytes-dev/vkbottle.git", rev = "2cd4859" }
tqdm = "^4.65.0"
dataclass-factory = "^2.16"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
